facade was added and all was tested

--- a/LeagueGram/LeagueGramTester/LeagueGramTester.csproj
+++ b/LeagueGram/LeagueGramTester/LeagueGramTester.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GroupTester.cs" />
     <Compile Include="ChatFactoryTester.cs" />
     <Compile Include="LeagueGramTester.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="UserManagerTester.cs" />
   </ItemGroup>
   <ItemGroup>
